# bruno_pond_lobotomy

./: README.md
culling_controller/: CMakeLists.txt  package.xml
culling_controller/src/: down_mover.cpp  path_finder.cpp  path_follower.cpp
